--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,1 +1,43 @@
-<p>por-pais works!</p>
+<h2>Por pais</h2>
+<hr>
+
+<div class="row">
+    <div class="col">
+        <form (ngSubmit)="buscar()" autocomplete="off">
+            <input type="text" name="termino" placeholder="Buscar pais..." class="form-control" [(ngModel)]="termino">
+        </form>
+    </div>
+</div>
+
+<hr>
+
+<div class="alert alert-danger">
+    <strong>Error!</strong> No se encontraron paises.
+</div>
+
+<div class="row">
+    <div class="col">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Bandera</th>
+                    <th>Nombre</th>
+                    <th>Poblacion</th>
+                    <th>Capital</th> 
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>bandera</td>
+                    <td>nombre</td>
+                    <td>123456789</td>
+                    <td>
+                        <a href="/pais/cri">Ver...</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
