--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -11,11 +11,11 @@
 
 <hr>
 
-<div class="alert alert-danger">
-    <strong>Error!</strong> No se encontraron paises.
+<div class="alert alert-danger" *ngIf="hayError">
+    <strong>Error!</strong> No se encontro nada con el termino {{termino}}.
 </div>
 
-<div class="row">
+<div class="row" *ngIf="paises.length > 0">
     <div class="col">
         <table class="table table-hover">
             <thead>
@@ -28,13 +28,15 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>bandera</td>
-                    <td>nombre</td>
-                    <td>123456789</td>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <td>{{i + 1}}</td>
                     <td>
-                        <a href="/pais/cri">Ver...</a>
+                        <img class="small-flag" [src]="pais.flag" alt="">
+                    </td>
+                    <td>{{pais.name}}</td>
+                    <td>{{pais.population | number }}</td>
+                    <td>
+                        <a [routerLink]="['/pais', pais.alpha2Code]">Ver...</a>
                     </td>
                 </tr>
             </tbody>
