--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -1,3 +1,4 @@
 <form (ngSubmit)="buscar()" autocomplete="off">
-    <input type="text" name="termino" placeholder="Buscar pais..." class="form-control" [(ngModel)]="termino">
+    <input type="text" name="termino" [placeholder]="placeholder" class="form-control" [(ngModel)]="termino"
+    (input)="teclaPresionada($event)">
 </form>
