--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,20 +1,22 @@
-<h2>Por capital</h2>
-<hr>
-
-<div class="row">
-    <div class="col">
-        <app-pais-input (onEnter)="buscar($event)" placeholder="Buscar capital"></app-pais-input>
+<div class="animate__animated animate__bounce animate__fadeIn ">
+    <h2>Por capital</h2>
+    <hr>
+    
+    <div class="row">
+        <div class="col">
+            <app-pais-input (onEnter)="buscar($event)" placeholder="Buscar capital"></app-pais-input>
+        </div>
     </div>
-</div>
-
-<hr>
-
-<div class="alert alert-danger" *ngIf="hayError">
-    <strong>Error!</strong> No se encontro nada con el termino {{termino}}.
-</div>
-
-<div class="row" *ngIf="paises.length > 0">
-    <div class="col">
-        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    
+    <hr>
+    
+    <div class="alert alert-danger" *ngIf="hayError">
+        <strong>Error!</strong> No se encontro nada con el termino {{termino}}.
+    </div>
+    
+    <div class="row" *ngIf="paises.length > 0">
+        <div>
+            <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        </div>
     </div>
 </div>
