--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,25 @@
-<p>por-region works!</p>
+<div class="animate__animated animate__bounce animate__fadeIn">
+    <h3>Buscar por region - <small>{{regionActiva | titlecase}}</small> </h3>
+    <hr>
+    <!-- condicionales en clases  -->
+    <!-- [class.btn-primary]="region === regionActiva" -->
+    <!-- [ngClass]="{
+        'btn-primary': region === regionActiva,
+        'btn-outline-primary': region !== regionActiva
+    }" -->
+    
+    <div class="row">
+        <div class="col">
+            <button *ngFor="let region of regiones" [class]="getClaseCSS(region)" (click)="activarRegion(region)">
+                {{region | titlecase}}
+            </button>
+        </div>
+    </div>
+    
+    
+    <div class="row" *ngIf="paises.length > 0">
+        <div>
+            <app-pais-tabla [paises]="paises"></app-pais-tabla>
+        </div>
+    </div>
+</div>
